@@ -1,3 +1,6 @@
+2015-07-23  Youri Hoogstrate
+	* Added some tests and improved the energy utility
+
 2015-07-15  Youri Hoogstrate
 	* Added the energy-estimation-utility python package in ./scripts
 	* Argument -t is implemented and allows to control the number of
